<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="300dp"
    android:padding="2dip">

    <RelativeLayout
        android:id="@+id/circle_menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:gravity="center">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dip">
<LinearLayout
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/arrow_back"
        android:layout_marginTop="20dp"
        android:layout_marginRight="6dp"
        android:src="@drawable/arrow_left"
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <TextView
        android:id="@+id/vname"
        android:text="@string/titip_doa"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="14sp"
        android:hint="@string/hint_email_tujuan"
        android:inputType="textEmailAddress"
        android:layout_margin="10dp"
        android:textColorHint="#0b0b0b"
        android:background="#FFECEBEB" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_gravity="top"
        android:gravity="top"
        android:padding="5dp"
        android:hint="@string/hint_tulis_doa"
        android:textColorHint="#0b0b0b"
        android:background="#FFECEBEB"
        android:ems="100"
        android:textSize="14sp"
        android:inputType="textMultiLine"
        android:id="@+id/message"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:visibility="gone"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:textColorHint="#0b0b0b"
        android:background="#FFECEBEB"
        android:text="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAllCaps="false"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/kirim_pesan"
        android:textColor="#FFF"
        android:background="@drawable/button"
        android:id="@+id/btnKirim" />

</LinearLayout>
    </ScrollView>
    </RelativeLayout>
    </RelativeLayout>
