<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="salam.gohajj.custom.menu.edit_profile">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/header_v2"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:circle="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.gohajj.id.salam.gohajj.custom.menu.edit_profile"
        android:layout_below="@+id/toolbar">

        <include layout="@layout/footer"
            android:id="@+id/footerHotel" />

        <RelativeLayout
            android:id="@+id/circle_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/footerHotel"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtkoneksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_black"
                    android:padding="4dp"
                    android:visibility="gone"
                    android:text="@string/tidak_ada_koneksi"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtJudul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_black"
                    android:text="@string/hotel"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/contentHotel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal" >

                        <!--<TextView-->
                            <!--android:id="@+id/Address"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:padding="3dp"-->
                            <!--android:hint="Address"-->
                            <!--/>-->

                        <Button
                            android:id="@+id/btn_find_hotel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cari"
                            android:layout_alignParentRight="true" />

                        <EditText
                            android:id="@+id/et_hotel"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:hint="@string/hnt_et_hotel"
                            android:layout_toLeftOf="@id/btn_find_hotel" />

                    </RelativeLayout>
                            <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
                                <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
                                <!--android:orientation="vertical"-->
                                <!--android:layout_height="match_parent"-->
                                <!--android:background="@color/colorSilver"-->
                                <!--android:id="@+id/linearHotel"-->
                                <!--tools:context=".sample.input">-->

                                <ListView
                                    android:id="@+id/listViewHotel"
                                    android:layout_width="fill_parent"
                                    android:layout_height="match_parent"
                                    />

                                <LinearLayout
                                    android:id="@+id/LinearHotelNotFound"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:visibility="gone"
                                    >
                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:textAlignment="center"
                                        android:layout_margin="20dp"
                                        android:textSize="16dp"
                                        android:text="@string/hotel_belum_terdaftar"/>
                                    <Button
                                        android:id="@+id/btnAddHotel"
                                        android:layout_width="wrap_content"
                                        android:layout_height="30dp"
                                        android:layout_gravity="center"
                                        android:layout_margin="5dp"
                                        android:background="@drawable/button"
                                        android:text="@string/daftarkan"
                                        android:textAllCaps="false"
                                        android:textColor="@color/white" />
                                </LinearLayout>
                            <!--</LinearLayout>-->
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
